GNOME Bugzilla – Bug 680646
UOA: Web authentificated accounts shouldn't be modifiable
Last modified: 2012-07-26 13:27:11 UTC
The profile has a special key telling if the params are read-only or not. Use it.
http://cgit.collabora.com/git/user/xclaesse/empathy.git/log/?h=restrictions
Created attachment 219688 [details] [review] UOA mc-plugin: CANNOT_SET_PARAMETERS depends on account's settings A special key has been added in .service files of online accounts telling its args should be considered readonly. Generic accounts (e.g. AIM) can still be modified.
Created attachment 219689 [details] [review] Accounts dialog: use external app for readonly UOA accounts
Review of attachment 219688 [details] [review]: ::: ubuntu-online-accounts/mc-plugin/mcp-account-manager-uoa.c @@ +710,3 @@ + McpAccountManagerUoa *self = (McpAccountManagerUoa *) storage; + AgAccountService *service; + guint restrictions = 0; init to CANNOT_SET_SERVICE ?
Review of attachment 219689 [details] [review]: Maybe worth cherry-picking this patch from my WIP branch first? http://cgit.collabora.com/git/user/cassidy/empathy/commit/?h=external&id=b56a0fc3dd2e14d55352f51e667093d1117aad43
ok, done that and merged in master (with your commit). Thanks.