UOA mc-plugin: CANNOT_SET_PARAMETERS depends on account's settings

A special key has been added in .service files of online accounts
telling its args should be considered readonly. Generic accounts (e.g. AIM)
can still be modified.

https://bugzilla.gnome.org/show_bug.cgi?id=680646